--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,10 @@
-# Data Manipulation
-pandas==1.5.3
-numpy==1.24.3
-
-# Visualization
-matplotlib==3.6.2
-seaborn==0.12.1
-
-# Machine Learning
-scikit-learn==1.2.0
-xgboost==1.7.0
-imblearn==0.0  # Use to install `imbalanced-learn`
-
-# Model Evaluation and Hyperparameter Tuning
-scipy==1.9.3
-
-# Notebook Support
-jupyter==1.0.0
-jupyterlab==3.6.3
+pandas==1.3.3
+numpy==1.21.2
+matplotlib==3.4.3
+seaborn==0.11.2
+scikit-learn==0.24.2
+scipy==1.7.1
+joblib==1.0.1
+statsmodels==0.12.2
+openpyxl==3.0.9
 
